# BrainfuckJIT

./: CMakeLists.txt  dump  jitted  main.cpp
include/: asm_jit_compiler.h  asm_jit_compiler2.h  asmjit_compiler.h  bfop.h  code_emitter.h  compiler.h  core.h  jit_compiler.h  jit_program.h  machine.h  profiler.h  program.h
libs/: libasmjit.dylib
